# rustrouter

./: Cargo.toml  README.md  flake.nix  justfile
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 24zaljz2i7h9z9d2acgb975qgl3n00fz-source  ipyw6f3ah05zxy1imaydg5bmr8qmsiyc-source  s64x3jam61s1rks8wgzs9dpancrwhjfi-source  x0g43i3sjpjvdrmg1dg9w089jzh2lls7-source
src/: lib.rs
