[package]
name = "rustrouter"
version = "0.1.0"
edition = "2024"
description = "A very simple openrouter library for rust, utilizing reqwest."
license = "Unlicense"
repository = "https://github.com/ViSaturn/rustrouter"
readme = "README.md"
keywords = ["openrouter", "ai"]
#categories = ["science::artificial-intelligence"]

exclude = [
    ".direnv/"
]

[dependencies]
eyre = "0.6.12"
jsonpath_lib = "0.3.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
superstruct = "0.10.0"
